force-app/main/default/objects/Contact/fields/Commodity_authorised_to_deal__c.field-meta.xml
<CustomField>
    <fullName>Commodity_authorised_to_deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commodity authorised to deal</label>
    <type>Checkbox</type>
</CustomField>