force-app/main/default/objects/Contact/fields/Con_Centre__c.field-meta.xml
<CustomField>
    <fullName>Con_Centre__c</fullName>
    <formula>Con_Team__r.Team_Centre__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>