force-app/main/default/objects/Contact/fields/Con_Division__c.field-meta.xml
<CustomField>
    <fullName>Con_Division__c</fullName>
    <formula>Con_Team__r.Team_Division__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group</label>
    <type>Text</type>
</CustomField>