force-app/main/default/objects/Contact/fields/CON_ET_Trader_ID__c.field-meta.xml
<CustomField>
    <fullName>CON_ET_Trader_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ET Trader ID</label>
    <length>35</length>
    <type>Text</type>
</CustomField>