force-app/main/default/objects/Contact/fields/Con_Group__c.field-meta.xml
<CustomField>
    <fullName>Con_Group__c</fullName>
    <formula>Con_Team__r.Team_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank</label>
    <type>Text</type>
</CustomField>