force-app/main/default/objects/Contact/fields/Con_Region__c.field-meta.xml
<CustomField>
    <fullName>Con_Region__c</fullName>
    <formula>Con_Team__r.Team_Region__c</formula>
    <label>Division</label>
    <type>Text</type>
</CustomField>