force-app/main/default/objects/Contact/fields/Con_Team__c.field-meta.xml
<CustomField>
    <fullName>Con_Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Business Centre</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Bankers</relationshipName>
    <type>Lookup</type>
</CustomField>