force-app/main/default/objects/Contact/fields/CRM_authorised_to_deal__c.field-meta.xml
<CustomField>
    <fullName>CRM_authorised_to_deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRM authorised to deal</label>
    <type>Checkbox</type>
</CustomField>