force-app/main/default/objects/Contact/fields/Customer_Banking_Centre__c.field-meta.xml
<CustomField>
    <fullName>Customer_Banking_Centre__c</fullName>
    <label>Customer Banking Centre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aberdeen</fullName>
            </value>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Business Direct</fullName>
            </value>
            <value>
                <fullName>Carlisle</fullName>
            </value>
            <value>
                <fullName>Closed Codes</fullName>
            </value>
            <value>
                <fullName>CRE - North</fullName>
            </value>
            <value>
                <fullName>Dundee</fullName>
            </value>
            <value>
                <fullName>East Midlands</fullName>
            </value>
            <value>
                <fullName>Edinburgh</fullName>
            </value>
            <value>
                <fullName>Gatwick</fullName>
            </value>
            <value>
                <fullName>Glasgow</fullName>
            </value>
            <value>
                <fullName>Gloucester</fullName>
            </value>
            <value>
                <fullName>Growth Finance</fullName>
            </value>
            <value>
                <fullName>Hull &amp; Humber</fullName>
            </value>
            <value>
                <fullName>Inverness</fullName>
            </value>
            <value>
                <fullName>Lanarkshire</fullName>
            </value>
            <value>
                <fullName>Leeds</fullName>
            </value>
            <value>
                <fullName>Lincoln</fullName>
            </value>
            <value>
                <fullName>London West End</fullName>
            </value>
            <value>
                <fullName>Manchester</fullName>
            </value>
            <value>
                <fullName>Merseyside</fullName>
            </value>
            <value>
                <fullName>North East</fullName>
            </value>
            <value>
                <fullName>North Yorkshire</fullName>
            </value>
            <value>
                <fullName>Northampton &amp; Peterborough</fullName>
            </value>
            <value>
                <fullName>Preston</fullName>
            </value>
            <value>
                <fullName>Reading &amp; Oxford</fullName>
            </value>
            <value>
                <fullName>SAF - Aberdeen Office</fullName>
            </value>
            <value>
                <fullName>SAF - Birmingham Office</fullName>
            </value>
            <value>
                <fullName>SAF - Central Scotland Office</fullName>
            </value>
            <value>
                <fullName>SAF - Leeds Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>