force-app/main/default/objects/Contact/fields/Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Date_Stamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inactive Date Stamp</label>
    <type>Date</type>
</CustomField>