force-app/main/default/objects/Contact/fields/FX_Vanilla_authorised_to_deal__c.field-meta.xml
<CustomField>
    <fullName>FX_Vanilla_authorised_to_deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FX Vanilla authorised to deal</label>
    <type>Checkbox</type>
</CustomField>