force-app/main/default/objects/Contact/fields/Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Reason__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Inactive Reason</label>
    <type>TextArea</type>
</CustomField>