force-app/main/default/objects/Contact/fields/IRRM_authorised_to_deal__c.field-meta.xml
<CustomField>
    <fullName>IRRM_authorised_to_deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IRRM authorised to deal</label>
    <type>Checkbox</type>
</CustomField>