force-app/main/default/objects/Contact/fields/Migration_Load_Date__c.field-meta.xml
<CustomField>
    <fullName>Migration_Load_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Migration Load Date</label>
    <type>Date</type>
</CustomField>