force-app/main/default/objects/Contact/fields/NAB_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>NAB_Legacy_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>NAB Legacy ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>