force-app/main/default/objects/Contact/fields/Officer_Code__c.field-meta.xml
<CustomField>
    <fullName>Officer_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Officer Code</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>