force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( ISPICKVAL( Contact_Status__c , &quot;Active&quot;) , 
IMAGE(&quot;/resource/Green_Checked_Image&quot;, &quot;Green&quot;, 30, 30), 
 IF(ISPICKVAL( Contact_Status__c , &quot;Inactive&quot;) , 
IMAGE(&quot;/resource/Red_Cross_Image&quot;, &quot;Red&quot;, 30, 30),
&quot;&quot;) )</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>