force-app/main/default/objects/Contact/fields/TDM_BankingCenter__c.field-meta.xml
<CustomField>
    <fullName>TDM_BankingCenter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TDM_BankingCenter</label>
    <length>50</length>
    <type>Text</type>
</CustomField>