force-app/main/default/objects/Contact/fields/TDM_Cust_Name__c.field-meta.xml
<CustomField>
    <fullName>TDM_Cust_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TDM Cust Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>