force-app/main/default/objects/Contact/fields/TDM_Name__c.field-meta.xml
<CustomField>
    <fullName>TDM_Name__c</fullName>
    <description>This field will receive value from TDM</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TDM_Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>