force-app/main/default/objects/Contact/fields/Treasury_Solutions_Area__c.field-meta.xml
<CustomField>
    <fullName>Treasury_Solutions_Area__c</fullName>
    <formula>Account.Treasury_Solution_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Treasury Solutions Area</label>
    <type>Text</type>
</CustomField>