force-app/main/default/objects/Contact/recordTypes/Banker.recordType-meta.xml
<RecordType>
    <fullName>Banker</fullName>
    <active>true</active>
    <label>Banker</label>
</RecordType>