force-app/main/default/objects/Contact/recordTypes/Internal.recordType-meta.xml
<RecordType>
    <fullName>Internal</fullName>
    <active>true</active>
    <description>Used for Treasury Solutions employees</description>
    <label>Internal</label>
</RecordType>