force-app/main/default/objects/Contact/validationRules/CON_Banker_Contact_Update_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>CON_Banker_Contact_Update_Access</fullName>
    <active>true</active>
    <description>Only FCG can update a banker contact</description>
    <errorConditionFormula>NOT($Permission.UpdateBankerContact) &amp;&amp;  RecordType.DeveloperName = &quot;Banker&quot;</errorConditionFormula>
    <errorMessage>Only FCG can update a banker contact.</errorMessage>
</ValidationRule>