force-app/main/default/objects/Contact/validationRules/CON_Contact_creation_restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>CON_Contact_creation_restriction</fullName>
    <active>true</active>
    <description>None of the users should be able to create Banker Record type in Salesforce - Not even Super User</description>
    <errorConditionFormula>AND( NOT($Permission.BankerEditAccess) ,
$Profile.Name&lt;&gt; &quot;System Administrator&quot;,
$Profile.Name&lt;&gt; &quot;DL Profile&quot;,
RecordType.DeveloperName=&quot;Banker&quot; 
)</errorConditionFormula>
    <errorMessage>Do not have permission to create or edit Banker</errorMessage>
</ValidationRule>