force-app/main/default/objects/Contact/validationRules/CON_Inactive_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CON_Inactive_Reason_Required</fullName>
    <active>true</active>
    <description>Inactive reason is required when the status is Inactive.</description>
    <errorConditionFormula>ISPICKVAL( Contact_Status__c , &quot;Inactive&quot;) &amp;&amp;  NOT(ISNEW()) &amp;&amp;  ISBLANK( Inactive_Reason__c )</errorConditionFormula>
    <errorDisplayField>Inactive_Reason__c</errorDisplayField>
    <errorMessage>Please provide the inactive reason</errorMessage>
</ValidationRule>