force-app/main/default/objects/Contact/listViews/AllBankers.listView-meta.xml
<ListView>
    <fullName>AllBankers</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Status__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <columns>Officer_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Banker</value>
    </filters>
    <label>All Bankers</label>
</ListView>