force-app/main/default/objects/Contact/listViews/AllInternal.listView-meta.xml
<ListView>
    <fullName>AllInternal</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Status__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.TITLE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Internal</value>
    </filters>
    <label>All Internal</label>
</ListView>