force-app/main/default/objects/Contact/listViews/Bankers_without_a_Team.listView-meta.xml
<ListView>
    <fullName>Bankers_without_a_Team</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Con_Team__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Banker</value>
    </filters>
    <label>Bankers without a Team</label>
</ListView>