force-app/main/default/objects/Contact/listViews/Contacts_Central.listView-meta.xml
<ListView>
    <fullName>Contacts_Central</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Status__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.TITLE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Treasury_Solutions_Area__c</field>
        <operation>equals</operation>
        <value>Central</value>
    </filters>
    <label>Contacts (Central)</label>
</ListView>